--- a/src/components/molecules/header-user-adress/HeaderUserAddress.module.scss
+++ b/src/components/molecules/header-user-adress/HeaderUserAddress.module.scss
@@ -15,3 +15,13 @@
     width: 16px;
   }
 }
+
+@media (max-width: 1024px) {
+  .header-user-address {
+    &__text {
+      max-width: 90px;
+    }
+  }
+}
+@media (max-width: 650px) {
+}
