--- a/src/components/organisms/mw-organism/login/MWLogin.module.scss
+++ b/src/components/organisms/mw-organism/login/MWLogin.module.scss
@@ -1,3 +1,4 @@
+@import "../../../../styles/globalStyles.scss";
 .mw-login {
   background-color: white;
 
@@ -14,6 +15,7 @@
     height: 32px;
 
     padding: var(--helio-space-M);
+    box-sizing: content-box;
 
     .close-icon {
       display: flex;
@@ -51,5 +53,24 @@
   .mw-login__content {
     padding: 0 var(--helio-space-XL) var(--helio-space-3XL)
       var(--helio-space-XL);
+
+    &__buttons {
+      display: flex;
+      flex-direction: column;
+      gap: var(--helio-space-M);
+    }
+    .description {
+      margin-top: var(--helio-space-L);
+      margin-bottom: var(--helio-space-M);
+
+      text-align: center;
+    }
+    .title {
+      text-align: center;
+    }
+    .terms {
+      margin-top: var(--helio-space-XL);
+      text-align: center;
+    }
   }
 }
