add generalPage(50%) - category + header adaptive

--- a/src/components/atoms/button/Button.module.scss
+++ b/src/components/atoms/button/Button.module.scss
@@ -20,3 +20,8 @@
     background-color: var(--color-accentHover);
   }
 }
+@media (max-width: 650px) {
+  .header-button {
+    height: 38px;
+  }
+}
