--- a/src/HOC/model-window/ModelWindow.module.scss
+++ b/src/HOC/model-window/ModelWindow.module.scss
@@ -1,11 +1,14 @@
+@import "../../styles/mixins.scss";
 .modelWindow {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  // justify-content: center;
+  // align-items: center;
+
   padding: 0;
 
   height: 100vh;
   width: 100%;
+
   min-width: 328px;
 
   background-color: rgb(0, 0, 0, 0);
@@ -15,9 +18,11 @@
   z-index: 9999;
 
   &__content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: grid;
+    width: fit-content;
+
+    // justify-self: center;
+    // align-self: center;
   }
 }
 
@@ -25,4 +30,15 @@
   background-color: rgb(0, 0, 0, 0.8);
 }
 
-// <HeaderNavItem> end
+// POSITION START
+.mw-position__center {
+  @include mw-position(center, center);
+}
+.mw-position__login {
+  @include mw-position(center, center);
+
+  @media (max-width: 650px) {
+    @include mw-position(center, self-end);
+  }
+}
+// POSITION END
