--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,11 @@
   --color-accentHover: #00846b;
   --helio-color-primaryBorder: #e4e4e4;
   --helio-primitiveColor-white: white;
+  --helio-primitiveColor-yellow500: #e19f17ff;
   --helio-color-secondaryBackground: #f5f5f5;
   --helio-color-secondaryBorder: #d8d8d8;
+  --helio-color-warning: #8b620e;
+  --helio-space-5XL: 100px;
   --helio-space-3XL: 64px;
   --helio-space-2XL: 48px;
   --helio-space-XL: 32px;
