almost done main-page,but need to add adaptive in content and cust footer

--- a/src/components/organisms/header/Header.module.scss
+++ b/src/components/organisms/header/Header.module.scss
@@ -1,5 +1,6 @@
 .header {
   width: 100%;
+  min-width: 350px;
 
   background-color: var(--color-globalBackground);
   padding: var(--helio-space-XL) 7.5%;
