--- a/src/components/organisms/footer/Footer.module.scss
+++ b/src/components/organisms/footer/Footer.module.scss
@@ -1,15 +1,42 @@
+@import "../../../styles/globalStyles.scss";
 .custom-border {
   width: 100%;
 }
 
-.footer-content {
+.footer {
+  background-color: var(--helio-primitiveColor-grey900);
   width: 100%;
 
-  background-color: var(--helio-primitiveColor-grey900);
   display: flex;
-  .block {
+  justify-content: center;
+  &__container {
     display: flex;
-    flex-direction: column;
-    gap: 16px;
+    justify-content: space-between;
+
+    // max-width: 1120px;
+    // width: 100%;
+    .column {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+
+      .block-title {
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 1.2;
+        color: var(--helio-color-buttonText);
+      }
+      .block-item {
+        font-size: 14px;
+        font-weight: 300;
+        line-height: 1.29;
+        color: var(--helio-primitiveColor-grey100);
+      }
+    }
+    .block-horizontal {
+    }
   }
+}
+.footer-content {
 }
