--- a/src/components/organisms/general-category/GeneralCategory.module.scss
+++ b/src/components/organisms/general-category/GeneralCategory.module.scss
@@ -5,6 +5,7 @@
   align-items: center;
 
   min-height: 400px;
+  min-width: 350px;
 
   padding-top: var(--helio-space-5XL);
   padding-bottom: var(--helio-space-3XL);
