--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,21 @@
 :root {
   --color-globalBackground: #ffc345;
+  --helio-color-softGlobalBackground: #fff3da;
   --color-accent: #00a082;
   --color-accentHover: #00846b;
   --helio-color-primaryBorder: #e4e4e4;
   --helio-primitiveColor-white: white;
   --helio-primitiveColor-yellow500: #e19f17ff;
+  --helio-primitiveColor-yellow50: #fff3da;
   --helio-primitiveColor-grey900: #1d1d1d;
+  --helio-primitiveColor-grey100: #e4e4e4;
+  --helio-primitiveColor-grey600: #6e6e6eff;
   --helio-color-secondaryBackground: #f5f5f5;
   --helio-color-secondaryBorder: #d8d8d8;
+  --helio-color-buttonText: #ffffff;
+  --helio-color-secondaryText: var(--helio-primitiveColor-grey600);
   --helio-color-warning: #8b620e;
+  /*<---| |---> */
   --helio-space-5XL: 100px;
   --helio-space-3XL: 64px;
   --helio-space-2XL: 48px;
@@ -17,7 +24,19 @@
   --helio-space-M: 16px;
   --helio-space-S: 12px;
   --helio-space-XS: 8px;
+  --helio-space-2XS: 4px;
 }
+
+ul {
+  --columns-desktop: 4;
+  --columns-tablet: 3;
+  --columns-mobile: 2;
+  --row-gap-desktop: 20px;
+  --row-gap-mobile: 20px;
+  --column-gap-desktop: 24px;
+  --column-gap-mobile: 8px;
+}
+
 body {
   margin: 0;
   padding: 0;
