--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -2,3 +2,11 @@ h3 {
   font-size: 58px;
   font-weight: 700;
 }
+
+.layout-container {
+  max-width: 1120px;
+  width: 100%;
+
+  min-width: 350px;
+  // margin: 0 auto;
+}
