add drugle to mw-login and hide address

--- a/src/HOC/model-window/ModelWindow.module.scss
+++ b/src/HOC/model-window/ModelWindow.module.scss
@@ -20,7 +20,7 @@
   &__content {
     // display: grid;
     width: fit-content;
-
+    // overflow: hidden;
     // justify-self: center;
     // align-self: center;
   }
