--- a/src/components/pages/main-page/MainPage.module.scss
+++ b/src/components/pages/main-page/MainPage.module.scss
@@ -3,8 +3,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: var(--helio-space-2XL);
 
   min-width: 350px;
 
-  gap: var(--helio-space-2XL);
+  padding-top: var(--helio-space-XL);
 }
