--- a/src/components/organisms/mw-organism/login/MWLogin.module.scss
+++ b/src/components/organisms/mw-organism/login/MWLogin.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../styles/globalStyles.scss";
+@import "../../../../styles/globalStyles.module.scss";
 .mw-login__mobile {
   width: fit-content;
   height: fit-content;
