--- a/src/styles/globalStyles.module.scss
+++ b/src/styles/globalStyles.module.scss
@@ -35,6 +35,13 @@ h3 {
     border-radius: 0;
   }
 }
+
+.mw-location-title {
+  font-size: 28px;
+  font-weight: 700;
+
+  margin-bottom: var(--helio-space-2XL);
+}
 //MW-TEMPLATE======>END
 //
 //MW-POSITION======>START
