--- a/src/components/organisms/mw-organism/set-location/choose-address/ChooseAddress.module.scss
+++ b/src/components/organisms/mw-organism/set-location/choose-address/ChooseAddress.module.scss
@@ -1,10 +1,9 @@
-.set-address {
+@import "/src/styles/globalStyles.module.scss";
+
+.choose-address {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-left: var(--helio-space-L);
-  padding-right: var(--helio-space-L);
-  padding-bottom: var(--helio-space-M);
 
   height: 100%;
 
@@ -47,4 +46,7 @@
       color: var(--color-accent);
     }
   }
+}
+.add-new-location {
+  display: flex;
 }
