--- a/src/components/organisms/mw-organism/set-location/search-location/SeatchLocation.module.scss
+++ b/src/components/organisms/mw-organism/set-location/search-location/SeatchLocation.module.scss
@@ -9,6 +9,7 @@
 
 .search-location__wrapper {
   display: grid;
+
   .title {
     justify-self: center;
   }
@@ -19,10 +20,18 @@
     padding-bottom: 122px;
 
     &__input-wrapper {
-      display: grid;
+      // display: grid;
+      // grid-template-rows: repeat(2, fit-content);
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
       margin: 1.25%;
-
       position: relative;
+
+      .input {
+        height: fit-content;
+      }
+
       .get-current-location__button {
         display: flex;
         align-items: center;
@@ -31,21 +40,26 @@
 
         height: fit-content;
       }
+
       .move-to-next {
         align-self: self-end;
         justify-self: self-end;
 
         text-overflow: ellipsis;
         position: absolute;
+        bottom: 0;
       }
     }
     &__map {
       height: 308px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
       margin: 1.25%;
       img {
         height: 100%;
-        width: 100%;
+        // width: 100%;
 
         object-fit: cover;
       }
