--- a/src/components/organisms/mw-organism/set-location/pin-map-location/PinMapLocation.module.scss
+++ b/src/components/organisms/mw-organism/set-location/pin-map-location/PinMapLocation.module.scss
@@ -11,15 +11,36 @@
     justify-self: center;
   }
 
-  .current-address {
-    font-size: 16px;
-    line-height: 1.5;
-    padding: 0 40px;
-    text-align: center;
-  }
+  &__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  &__button {
-    justify-self: center;
-    // width: fit-content;
+    gap: var(--helio-space-2XL);
+    padding-bottom: var(--helio-space-2XL);
+
+    .map-container {
+      width: 100%;
+      height: 308px;
+
+      object-fit: cover;
+      overflow: hidden;
+
+      border-radius: 4px;
+    }
+
+    .current-address {
+      font-size: 16px;
+      line-height: 1.5;
+
+      padding: 0 40px;
+
+      text-align: center;
+    }
+
+    .button {
+      justify-self: center;
+      // width: fit-content;
+    }
   }
 }
