--- a/src/components/atoms/button/Button.module.scss
+++ b/src/components/atoms/button/Button.module.scss
@@ -52,4 +52,9 @@
     background-color: var(--color-accentHover);
     transition: 0.3s ease-in-out;
   }
+
+  &:disabled {
+    background-color: var(--helio-color-disabled);
+    cursor: not-allowed;
+  }
 }
