--- a/src/components/molecules/mw-input/MWInput.module.scss
+++ b/src/components/molecules/mw-input/MWInput.module.scss
@@ -55,8 +55,6 @@
       }
     }
     .input-placeholder {
-      color: red;
-
       position: absolute;
       z-index: -1;
       transition: 0.4s;
@@ -65,4 +63,13 @@
       top: 0;
     }
   }
+}
+
+.error {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+  margin-top: 6px;
+
+  color: var(--helio-color-alert);
 }
