--- a/src/components/molecules/mw-input/MWInput.module.scss
+++ b/src/components/molecules/mw-input/MWInput.module.scss
@@ -1,3 +1,4 @@
+@import "/src/styles/globalStyles.module.scss";
 .mw-input-wrapper {
   position: relative;
   transition: height 1s ease;
@@ -27,18 +28,21 @@
       z-index: 2;
       .input {
         width: 100%;
+
         background-color: transparent;
-
-        transition: 0.4s;
-
         overflow: visible;
-
-        // &:not(:focus) ~ .button-cleaner {
-        //   visibility: visible;
-        // }
+        transition: 0.4s;
 
         &:not(:placeholder-shown) ~ .button-cleaner {
           visibility: visible;
+        }
+
+        &:not(:placeholder-shown) ~ .input-placeholder__hide {
+          display: none;
+        }
+
+        &:not(:placeholder-shown) ~ .input-placeholder__show {
+          display: block;
         }
 
         &:focus ~ .input-placeholder,
@@ -48,6 +52,7 @@
           top: -1rem;
         }
       }
+
       .input-placeholder {
         color: var(--helio-color-disabledText);
 
@@ -58,6 +63,10 @@
         left: 0;
         top: 0;
       }
+      .input-placeholder__show {
+        display: none;
+      }
+
       .button-cleaner {
         position: absolute;
         right: 0;
@@ -78,13 +87,13 @@
     font-size: 12px;
     font-weight: 400;
     line-height: 16px;
-    margin-top: 6px;
-
     color: var(--helio-color-alert);
+
+    margin-top: 6px;
     visibility: hidden;
   }
 
-  .error-show {
+  .error__show {
     visibility: visible;
   }
 }
