--- a/src/components/organisms/mw-organism/set-location/search-location/SeatchLocation.module.scss
+++ b/src/components/organisms/mw-organism/set-location/search-location/SeatchLocation.module.scss
@@ -1,6 +1,6 @@
 @import "/src/styles/globalStyles.module.scss";
 
-.text {
+.font {
   font-size: 14px;
   font-weight: 400;
   line-height: 1.6;
@@ -27,9 +27,9 @@
       gap: 10px;
       margin: 1.25%;
       position: relative;
-
       .input {
         height: fit-content;
+        position: relative;
       }
 
       .get-current-location__button {
@@ -65,4 +65,46 @@
       }
     }
   }
+}
+
+.Suggestions-list {
+  width: 100%;
+  max-height: 300px;
+
+  background-color: var(--helio-color-floatingElementBackground);
+  border-radius: var(--helio-space-2XS);
+  border: 1px solid var(--helio-color-primaryBorder);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15), 0 2px 4px rgba(0, 0, 0, 0.05);
+
+  overflow: auto;
+  position: absolute;
+
+  z-index: 2;
+
+  &-item {
+    display: flex;
+    flex-direction: column;
+    gap: var(--helio-space-2XS);
+
+    width: 100%;
+
+    padding: var(--helio-space-S);
+    cursor: pointer;
+    &:hover {
+      background-color: var(--helio-color-secondaryBackground);
+    }
+    .text {
+      font-size: 16px;
+      line-height: 1.25;
+      word-break: break-word;
+    }
+    .sub-text {
+      font-size: 14px;
+      line-height: 1.3;
+      color: var(--helio-color-secondaryText);
+    }
+  }
+  // right: 0;
+  // z-index: 2;
+  // bottom: 0;
 }
