--- a/src/components/organisms/mw-organism/set-location/search-location/SeatchLocation.module.scss
+++ b/src/components/organisms/mw-organism/set-location/search-location/SeatchLocation.module.scss
@@ -67,7 +67,9 @@
   }
 }
 
-.Suggestions-list {
+.suggestions-list {
+  display: grid;
+
   width: 100%;
   max-height: 300px;
 
@@ -80,31 +82,4 @@
   position: absolute;
 
   z-index: 2;
-
-  &-item {
-    display: flex;
-    flex-direction: column;
-    gap: var(--helio-space-2XS);
-
-    width: 100%;
-
-    padding: var(--helio-space-S);
-    cursor: pointer;
-    &:hover {
-      background-color: var(--helio-color-secondaryBackground);
-    }
-    .text {
-      font-size: 16px;
-      line-height: 1.25;
-      word-break: break-word;
-    }
-    .sub-text {
-      font-size: 14px;
-      line-height: 1.3;
-      color: var(--helio-color-secondaryText);
-    }
-  }
-  // right: 0;
-  // z-index: 2;
-  // bottom: 0;
 }
