add mw-location-slides adaptive but need refactoring

--- a/src/components/organisms/mw-organism/set-location/confirm-location/ConfirmLocation.module.scss
+++ b/src/components/organisms/mw-organism/set-location/confirm-location/ConfirmLocation.module.scss
@@ -32,3 +32,11 @@
     }
   }
 }
+@media (max-width: 740px) {
+  .confirm-location {
+    padding: 0;
+    &__content {
+      gap: var(--helio-space-2XL);
+    }
+  }
+}
