--- a/src/HOC/model-window/ModelWindow.module.scss
+++ b/src/HOC/model-window/ModelWindow.module.scss
@@ -6,21 +6,19 @@
 
   padding: 0;
 
-  height: 100vh;
+  height: 100%;
   width: 100%;
-
-  min-width: 328px;
 
   background-color: rgb(0, 0, 0, 0);
 
   position: fixed;
   inset: 0;
   z-index: 9999;
+  overflow: auto;
 
   &__content {
     width: fit-content;
-    // max-width: 800px;
-    // width: 100%;
+    min-width: 350px;
   }
 }
 
