refactor MWLocationSlides logics

--- a/src/components/organisms/mw-organism/set-location/choose-address/ChooseAddress.module.scss
+++ b/src/components/organisms/mw-organism/set-location/choose-address/ChooseAddress.module.scss
@@ -7,12 +7,12 @@
 
   height: 100%;
 
-  &__title {
-    font-size: 28px;
-    font-weight: 700;
+  // &__title {
+  //   font-size: 28px;
+  //   font-weight: 700;
 
-    margin-bottom: var(--helio-space-2XL);
-  }
+  //   margin-bottom: var(--helio-space-2XL);
+  // }
 
   &__current {
     display: flex;
