--- a/src/components/templates/mw-template/MWTemplate.module.scss
+++ b/src/components/templates/mw-template/MWTemplate.module.scss
@@ -1,61 +1,104 @@
 @import "/src/styles/globalStyles.module.scss";
 
-.close-icon__wrapper {
+.mw-template__set-address {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
 
-  padding: var(--helio-space-M);
-  box-sizing: content-box;
+  width: 100%;
+  height: 100%;
 
-  transition: 0.3s ease-in-out;
-  .text {
-  }
+  border-radius: var(--helio-space-S);
+  background-color: white;
 
-  .close-icon {
-    // align-self: center;
-    // justify-self: self-end;
-
+  .close-icon__wrapper {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    height: 32px;
-    width: 32px;
 
-    cursor: pointer;
-    &:after {
-      content: "";
-      height: 21px;
-      width: 3px;
+    padding: var(--helio-space-M);
+    box-sizing: content-box;
 
-      background-color: rgb(100, 99, 99);
-      border-radius: 2px;
-
-      transform: rotateZ(135deg);
-      position: absolute;
+    transition: 0.3s ease-in-out;
+    .text {
     }
-    &:before {
-      content: "";
-      height: 21px;
-      width: 3px;
 
-      background-color: rgb(100, 99, 99);
-      border-radius: 2px;
+    .close-icon {
+      // align-self: center;
+      // justify-self: self-end;
 
-      transform: rotateZ(45deg);
-      position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 32px;
+      width: 32px;
+
+      cursor: pointer;
+      &:after {
+        content: "";
+        height: 21px;
+        width: 3px;
+
+        background-color: rgb(100, 99, 99);
+        border-radius: 2px;
+
+        transform: rotateZ(135deg);
+        position: absolute;
+      }
+      &:before {
+        content: "";
+        height: 21px;
+        width: 3px;
+
+        background-color: rgb(100, 99, 99);
+        border-radius: 2px;
+
+        transform: rotateZ(45deg);
+        position: absolute;
+      }
+    }
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+
+    padding: 0 var(--helio-space-2XL) var(--helio-space-M)
+      var(--helio-space-2XL);
+
+    position: relative;
+
+    .mw-location-title {
+      text-align: center;
+      font-size: 28px;
+      font-weight: 700;
+
+      width: 100%;
+
+      margin-bottom: var(--helio-space-2XL);
+    }
+
+    .button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      height: 122px;
     }
   }
 }
 
-.content {
-  padding-left: var(--helio-space-2XL);
-  padding-right: var(--helio-space-2XL);
-  padding-bottom: var(--helio-space-M);
-}
 @media (max-width: 600px) {
-  .content {
-    padding-left: var(--helio-space-M);
-    padding-right: var(--helio-space-M);
+  .mw-template__set-address {
+    border-radius: 0;
+    .content {
+      flex: 1 1 auto;
+
+      padding-left: var(--helio-space-M);
+      padding-right: var(--helio-space-M);
+
+      .mw-location-title {
+        font-size: 21px;
+      }
+    }
   }
 }
