--- a/src/components/organisms/header/Header.module.scss
+++ b/src/components/organisms/header/Header.module.scss
@@ -40,6 +40,10 @@
         visibility: hidden;
         transition: 0.3 ease-in-out;
       }
+      .profile--desktop {
+        display: flex;
+        gap: var(--helio-space-L);
+      }
     }
   }
   .mobile-address {
