--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --helio-primitiveColor-grey100: #e4e4e4;
   --helio-primitiveColor-red300: #ff6666ff;
   --helio-primitiveColor-white: #ffffffff;
+  --helio-primitiveColor-blackTransparent10: #0000001a;
   --helio-color-secondaryBackground: #f5f5f5;
   --helio-color-secondaryBorder: #d8d8d8;
   --helio-color-buttonText: #ffffff;
@@ -21,6 +22,7 @@
   --helio-color-secondaryText: var(--helio-primitiveColor-grey600);
   --helio-color-floatingElementBackground: var(--helio-primitiveColor-white);
   --helio-color-warning: #8b620e;
+  --helio-color-shadow: var(--helio-primitiveColor-blackTransparent10);
   --helio-color-alert: var(--helio-primitiveColor-red300);
   --loader-color: var(--helio-color-defaultLoader);
   --helio-color-defaultLoader: var(--helio-primitiveColor-grey300);
@@ -87,7 +89,7 @@ button {
   padding: 0;
   font: inherit;
   color: inherit;
-  /* line-height: normal; */
+  line-height: normal;
   overflow: visible;
   text-align: inherit;
   letter-spacing: inherit;
