--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,13 @@
   --helio-primitiveColor-red300: #ff6666ff;
   --helio-primitiveColor-white: #ffffffff;
   --helio-primitiveColor-blackTransparent10: #0000001a;
+  --helio-primitiveColor-black: #000000ff;
   --helio-color-secondaryBackground: #f5f5f5;
   --helio-color-secondaryBorder: #d8d8d8;
   --helio-color-buttonText: #ffffff;
   --helio-color-disabledText: var(--helio-primitiveColor-grey300);
   --helio-color-disabled: var(--helio-primitiveColor-grey300);
+  --helio-color-primaryText: var(--helio-primitiveColor-black);
   --helio-color-secondaryText: var(--helio-primitiveColor-grey600);
   --helio-color-floatingElementBackground: var(--helio-primitiveColor-white);
   --helio-color-warning: #8b620e;
