--- a/src/components/molecules-store/store-catalogue/StoreCatalogue.module.scss
+++ b/src/components/molecules-store/store-catalogue/StoreCatalogue.module.scss
@@ -24,40 +24,27 @@
   &__list {
   }
 
-  &__link {
-    display: grid;
-
-    color: var(--helio-color-primaryText);
-
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 1.6;
-    text-align: left;
-    width: fit-content;
-    position: relative;
-  }
-
-  &__link_active {
-    &::before {
-      content: "";
-
-      align-self: center;
-      z-index: -1;
-      display: flex;
-
-      width: 100%;
-      height: var(--helio-space-2XS);
-
-      background-color: var(--helio-color-mediumGlobalBackground);
-      transform: rotate(-2deg);
-      position: absolute;
-    }
-  }
   &__item {
     padding: var(--helio-space-M) var(--helio-space-XS) var(--helio-space-M)
       calc(var(--helio-space-M) + var(--helio-space-2XS));
     box-sizing: border-box;
 
     border-bottom: 1px solid var(--helio-color-primaryBorder);
+  }
+
+  .store-catalogue__link_active {
+    background-color: var(--helio-color-mediumGlobalBackground);
+    border-radius: 100px;
+    font-size: 4px;
+  }
+
+  .store-catalogue__link {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.6;
+
+    color: var(--helio-color-primaryText);
+
+    text-align: left;
   }
 }
