--- a/src/components/molecules-store/store-header-sticky/StoreHeaderStickyHeader.module.scss
+++ b/src/components/molecules-store/store-header-sticky/StoreHeaderStickyHeader.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
 
   width: 100%;
-  height: 140px;
+  height: 0;
 
   background: var(--helio-color-floatingElementBackground);
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
@@ -14,6 +14,7 @@
   top: 0;
 
   transition: all 0.4s ease-out;
+  overflow: hidden;
 
   &__container {
     max-width: 1450px;
@@ -23,4 +24,8 @@
     font-size: 2em;
     margin: 0.67em 0;
   }
+}
+
+.visible {
+  height: 140px;
 }
