--- a/src/components/organisms-store/store-cart/StoreCart.module.scss
+++ b/src/components/organisms-store/store-cart/StoreCart.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   overflow-x: hidden;
 
-  // min-height: 400px;
+  min-height: 400px;
 
   border-radius: 10px;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
