--- a/src/components/tamplates-store/mw-window-body/MWWindowBody.module.scss
+++ b/src/components/tamplates-store/mw-window-body/MWWindowBody.module.scss
@@ -1,7 +1,8 @@
 .mw-window-body {
   display: flex;
   flex-direction: column;
-  width: 600px;
+
+  margin: 0 auto;
 
   border-radius: var(--helio-space-S);
   box-shadow: 0 2px 20px 12px var(--helio-color-shadow);
@@ -23,4 +24,14 @@
   &__children {
     padding: 0 var(--helio-space-XL);
   }
+}
+
+.mw-window-body--general {
+  width: 600px;
+}
+
+.mw-window-body--extended {
+  max-width: 1200px;
+  min-width: 800px;
+  width: 80%;
 }
